# ml-systems-portfolio

./: .env.example  .gitignore  GUMROAD_ADDITIONAL_DETAILS.txt  GUMROAD_DESCRIPTION_READY.txt  GUMROAD_MARKETING.md  GUMROAD_OSINT_PRO.md  GUMROAD_PRODUCT_PAGE.md  GUMROAD_SETUP_CHECKLIST.md  GUMROAD_SHORT_COPY.md  GUMROAD_SUMMARY.txt  LAUNCH_READY.md  LICENSE  Makefile  ORCHESTRATOR.md  OSINT_LAUNCH_CHECKLIST.md  QUICKSTART.md  README.md  SCRAPER_STATUS.md  SOCIAL_MEDIA_COPY.md  TESTING_CHECKLIST.md  WALKTHROUGH.md  build_exe.py  debug_intelx.py  deep_search_email_20251130_193124.json  package.json  pivot_username_20251130_193245.json  pyproject.toml  requirements.txt  test_all_scrapers.py  test_apis.py  test_breach_scrapers.py  test_breaches.py  test_bulk.csv  test_bulk.py  test_deep_extraction.py  test_emailrep_direct.py  test_hibp.py  test_pivot.py  test_scraper.py  test_unified_search.py
.github/workflows/: ci.yml
data/: generate_dataset.py  new_inputs.csv
infra/docker/: Dockerfile
infra/terraform/: main.tf
marketing/: DEVTO_LAUNCH_ARTICLE.md  SCREENSHOT_GUIDE.md
models/: metadata.json
models/checkpoints/: model.joblib
notebooks/: exploration.ipynb
outputs/: predictions.csv
src/backend/: app.py  orchestrator_api.py
src/data/: loaders.py
src/ml/: inference.py  pipeline.py  training.py
src/orchestrator/: __init__.py  executor.py  monitoring.py  pipeline.py  registry.json
src/scripts/: deploy.py  etl.py
static/: index.html
tests/unit/: test_app.py
tools/adb_automation/: README.md  adb_manager.py  cli.py  models.py
tools/osint/: README.md  (+2 more)
(+40 files in other folders)
